--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<header id="header">
 
 				<!-- Logo -->
-                <img src="images/logo.png" height="100%" />
+                <img src="images/Logo.png" height="100%" />
 					<!--<h1 id="logo">Simply Music</h1>-->
 
 				<!-- Nav -->
