Update Index File
Headings and About Changed

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 					<!--<h1 id="logo">Simply Music</h1>-->
 
 				<!-- Nav -->
-					<nav id="nav">
+					<nav id="nav"> 
 						<ul>
 							<li><a href="#intro">Intro</a></li>
-							<li><a href="#one">What I Do</a></li>
+							<li><a href="#one">About</a></li>
 							<li><a href="#two">Who I Am</a></li>
-							<li><a href="#work">My Work</a></li>
+							<li><a href="#work">Simply Music's Work</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</nav>
@@ -53,11 +53,9 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>About</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>I teach cornet and trumpet to people of all ages from beginner level all the way up to intermediate.  I will tailor your sessions to your tastes, I am currently teaching one of my students the doctor who theme tune! I use different techniques to suit the individual. I can put my students through their grades if they wish to go down that route. I use different techniques to suit the individual. I also help with reading and understanding music. Lessons are usually mixed with playing and theory (to save your chops!) I have one to one teaching experience, having taught Chinese to children. I am a mobile tutor so will come to your home to provide the sessions. I have an up to date CRB check. </p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
