Update Index File 2
Who I am bit

--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>My name is Bridget. I am 27 years old. I have always been very musical, and enjoyed playing the cornet since the age of ten. I have played in several brass bands growing up including Hade Edge Band, Cawthorne Brass Band and I currently play with Dinnington Colliery Band. I also enjoy playing the trumpet and regularly attend jazz sessions in Sheffield. I set up Simply Music because I am passionate about making music and want to inspire others to pick up an instrument and have a go at playing! My other interests include: cycling in the Peak District, walking energetic dogs, snowboarding in the French Alps and playing the mandolin in folk sessions.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
