--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
 				<div class="content container">
 					<header>
 						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<p>What our customer's say</p>
 					</header>
 
 					<!-- Lightbox Gallery  -->
