Update Index File 4
Customers say and contact words

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 			<section id="work" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>My Work</h2>
-						<p>What our customer's say</p>
+						<h2>Simply Music's Work</h2>
+						<p>What our customer's say about us</p>
 					</header>
 
 					<!-- Lightbox Gallery  -->
@@ -102,7 +102,7 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content container">
 					<header>
-						<h2>Say Hello.</h2>
+						<h2>Contact</h2>
 						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
 					</header>
 					<div class="box container 75%">
