--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<header>
 						<h2>About</h2>
 					</header>
-					<p>I teach cornet and trumpet to people of all ages from beginner level all the way up to intermediate.  I will tailor your sessions to your tastes, I am currently teaching one of my students the doctor who theme tune! I use different techniques to suit the individual. I can put my students through their grades if they wish to go down that route. I use different techniques to suit the individual. I also help with reading and understanding music. Lessons are usually mixed with playing and theory (to save your chops!) I have one to one teaching experience, having taught Chinese to children. I am a mobile tutor so will come to your home to provide the sessions. I have an up to date CRB check. </p>
+					<p>I teach cornet and trumpet to people of all ages from beginner level all the way up to intermediate. I will tailor your session to your tastes and what you want to achieve out of playing. I can help you through ABRSM grades too if you wish. I am a mobile tutor and have an up to date CRB check.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -66,7 +66,7 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>My name is Bridget. I am 27 years old. I have always been very musical, and enjoyed playing the cornet since the age of ten. I have played in several brass bands growing up including Hade Edge Band, Cawthorne Brass Band and I currently play with Dinnington Colliery Band. I also enjoy playing the trumpet and regularly attend jazz sessions in Sheffield. I set up Simply Music because I am passionate about making music and want to inspire others to pick up an instrument and have a go at playing! My other interests include: cycling in the Peak District, walking energetic dogs, snowboarding in the French Alps and playing the mandolin in folk sessions.</p>
+					<p>My name is Bridget. I am 27 years old. I have always been very musical, and enjoyed playing the cornet since the age of ten. I have played in several brass bands growing up and I also enjoy playing the trumpet and regularly attend jazz sessions in Sheffield. I set up Simply Music because I am passionate about making music and want to inspire others to pick up an instrument and have a go at playing!</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
