--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 					<!-- Lightbox Gallery  -->
 						<div class="container 75% gallery">
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/BridgetPearsonFeedback.jpg" title="The Anonymous Red" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/BridgetPearsonFeedback.jpg" class="image fit from-left"><img src="images/BridgetPearsonFeedback.jpg" title="The Anonymous Red" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/thumbs/review2.jpg" class="image fit from-right"><img src="images/thumbs/review2.jpg" title="Airchitecture II" alt="" /></a></div>
 							</div>
 							<div class="row 0% images">
 								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a></div>
