--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 					<div class="box container 75%">
 
 					<!-- Contact Form -->
-							<form method="post" action="#">
+							<form method="post" action="https://formspree.io/bridget@yourbridgetochina.co.uk">
 								<div class="row 50%">
 									<div class="6u 12u(mobile)"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="6u 12u(mobile)"><input type="email" name="email" placeholder="Email" /></div>
+									<div class="6u 12u(mobile)"><input type="email" name="_replyto" placeholder="Email" /></div>
 								</div>
 								<div class="row 50%">
 									<div class="12u"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
