change for message
message change

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<div class="content container">
 					<header>
 						<h2>Contact</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<p>If you have a question or just want to get in touch please us the form below.</p>
 					</header>
 					<div class="box container 75%">
 
