Changes to seo data and phone number

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<head>
 		<title>Inspired to play</title>
 		<meta charset="utf-8" />
+		<meta name="description" content="Sheffield based music tutor, specialsing in brass tution.  Popular instruments include Cornet and Trumpet, willing to travel to Sheffield, Chesterfield and Barnsley.">
+		<meta name="keywords" content="Trumpet, Cornet, Sheffield, Sheffield Brass, tutor, music tutor, Sheffield Cornet, sheffield trumprt, trumpet tutor, brass tutor, cornet tutor, brass teacher, teacher, teacher sheffield, trumpet teacher, cornet teacher, trumpet lessons, brass lessons, trumpet teacher in sheffield, barnsley, chesterfield, brass barnsley, trumpet barnsley, simply music, inspired to play, play music">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -82,8 +84,8 @@
 					<!-- Lightbox Gallery  -->
 						<div class="container 75% gallery">
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/BridgetPearsonFeedback.jpg" class="image fit from-left"><img src="images/BridgetPearsonFeedback.jpg" height="282px" title="The Anonymous Red" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="images/thumbs/review2.jpg" class="image fit from-right"><img src="images/thumbs/review2b.jpg" title="Airchitecture II" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/BridgetPearsonFeedback.jpg" class="image fit from-left"><img src="images/BridgetPearsonFeedback.jpg" height="282px" title="Review one" alt="Friendly tutor provding fun, tailor made lessons. Restored my joy of playing" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/thumbs/review2.jpg" class="image fit from-right"><img src="images/thumbs/review2b.jpg" title="Review two" alt="Bridget's lessons are fun and engaging, she even has a few tricks up her lseav to keep things interesting." /></a></div>
 							</div>
 							<div class="row 0% images">
 								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a></div>
@@ -104,6 +106,8 @@
 					<header>
 						<h2>Contact</h2>
 						<p>If you have a question or just want to get in touch please use the form below.</p>
+						<p>Or why not call on</p>
+						<p><a href="tel:07704799767">07704799767</a></p>
 					</header>
 					<div class="box container 75%">
 
