--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 				<div class="content container">
 					<header>
 						<h2>Contact</h2>
-						<p>If you have a question or just want to get in touch please use the form below.</p>
-						<p>Or why not call on</p>
-						<p><a href="tel:07704799767">07704799767</a></p>
+						<p>If you have a question or just want to get in touch please use the form below.</br>
+						Or why not call on</br>
+						<p><a href="tel:07704799767"><strong>07704799767</strong></a></p>
 					</header>
 					<div class="box container 75%">
 
