--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<div class="6u 12u(mobile)"><a href="images/thumbs/review2.jpg" class="image fit from-right"><img src="images/thumbs/review2b.jpg" title="Review two" alt="Bridget's lessons are fun and engaging, she even has a few tricks up her lseav to keep things interesting." /></a></div>
 							</div>
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/2.jpg" class="image fit from-left"><img src="images/2.jpg" title="Review 27th June 16" alt="Relaxed, informative and well structured to my needs" /></a></div>
 								<div class="6u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit from-right"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a></div>
 							</div>
 							<div class="row 0% images">
