--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content container 75%">
 					<header>
-						<h2>Simply Music</h2>
+						<h2>How to Play the Trumpet without a Trumpet</h2>
 					</header>
-					<p>Inspired to play</p>
+					<p>Online Course</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
