--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<nav id="nav"> 
 						<ul>
 							<li><a href="#intro">Intro</a></li>
+							<li><a href="#onlinecourse">Online Course</a></li>
 							<li><a href="#one">About</a></li>
 							<li><a href="#two">Who I Am</a></li>
 							<li><a href="#work">Simply Music's Work</a></li>
@@ -49,6 +50,17 @@
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
 				</div>
+			</section>
+		
+		<!-- Online Course -->
+			<section id="one" class="main style2 right dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>Online Course</h2>
+					</header>
+					<p>Online Course Text Here</p>
+				</div>
+				<a href="#onlinecourse" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- One -->
