--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					</header>
 					<p>Online Course</p>
 					<footer>
-						<a href="#one" class="button style2 down">More</a>
+						<a href="#onlinecourse" class="button style2 down">More</a>
 					</footer>
 				</div>
 			</section>
@@ -60,7 +60,7 @@
 					</header>
 					<p>Online Course Text Here</p>
 				</div>
-				<a href="#onlinecourse" class="button style2 down anchored">Next</a>
+				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- One -->
