Youtube Online Course Link
Update to Online Course Text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<header>
 						<h2>Online Course</h2>
 					</header>
-					<p>Online Course Text Here</p>
+					<p>How to Play the Trumpet without a Trumpet takes you through the first steps to being able to confidently play the trumpet. Click here to find out more <a href="https://www.youtube.com/watch?v=kCy1RvnArLk" target="_blank">Online Trumpet Course</a> </p>
 				</div>
 				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
