Link at the top added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<header>
 						<h2>How to Play the Trumpet without a Trumpet</h2>
 					</header>
-					<p>Online Course</p>
+					<p><a href="https://www.youtube.com/watch?v=kCy1RvnArLk" target="_blank">Watch Video</a></p>
 					<footer>
 						<a href="#onlinecourse" class="button style2 down">More</a>
 					</footer>
