Changed the link from youtube to sign up here

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<header>
 						<h2>Online Course</h2>
 					</header>
-					<p>How to Play the Trumpet without a Trumpet takes you through the first steps to being able to confidently play the trumpet. Click here to find out more<a href="https://www.youtube.com/watch?v=kCy1RvnArLk" target="_blank">Online Trumpet Course</a></p>
+					<p>How to Play the Trumpet without a Trumpet takes you through the first steps to being able to confidently play the trumpet. We are looking for people to help test the programme. <a href="http://inspiredtoplay.us8.list-manage1.com/subscribe?u=0b85c4b2298f1cc18c45b8a68&id=e4b00f68e6" target="_blank">Sign up here for just £3</a></p>
 				</div>
 				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
