--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</section>
 		
 		<!-- Online Course -->
-			<section id="onlinecourse" class="main style2 right dark fullscreen">
+			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
 						<h2>Online Course</h2>
